# fxcalc

./: .gitignore  CMakeLists.txt  README.md  cleanbuild.sh  cleanrelease.sh  fxcalc.sublime-project
res/: AppIcon.afdesign  AppIcon.icns  fxcalc.qrc  instruments.txt  license.txt  resources.qrc
src/: fixer.cpp  fixer.h  form.cpp  form.h  main.cpp  mainwindow.cpp  mainwindow.h
